tests/snapshots/run_file__and.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/and.hvm
---
Lazy mode:
false

Strict mode:
false
