tests/snapshots/run_file__basic_num_ops.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/basic_num_ops.bend
---
NumScott:
λa (a List/Cons/tag 30 λb (b List/Cons/tag 10 λc (c List/Cons/tag 200 λd (d List/Cons/tag 2 λe (e List/Cons/tag 0 λf (f List/Cons/tag 30 λg (g List/Cons/tag 0 λh (h List/Cons/tag 30 λi (i List/Cons/tag 0 λj (j List/Cons/tag 1 λk (k List/Cons/tag 0 λl (l List/Cons/tag 1 λm (m List/Cons/tag 65535 λn (n List/Cons/tag +30 λo (o List/Cons/tag +10 λp (p List/Cons/tag +200 λq (q List/Cons/tag +2 λr (r List/Cons/tag +0 λs (s List/Cons/tag +30 λt (t List/Cons/tag +0 λu (u List/Cons/tag +30 λv (v List/Cons/tag 0 λw (w List/Cons/tag 1 λx (x List/Cons/tag 0 λy (y List/Cons/tag 1 λz (z List/Cons/tag 65535 λab (ab List/Cons/tag -30 λbb (bb List/Cons/tag -10 λcb (cb List/Cons/tag +200 λdb (db List/Cons/tag +2 λeb (eb List/Cons/tag +0 λfb (fb List/Cons/tag +26 λgb (gb List/Cons/tag -28 λhb (hb List/Cons/tag -2 λib (ib List/Cons/tag 0 λjb (jb List/Cons/tag 1 λkb (kb List/Cons/tag 1 λlb (lb List/Cons/tag 0 λmb (mb List/Cons/tag 65535 λnb (nb List/Cons/tag +10 λob (ob List/Cons/tag +30 λpb (pb List/Cons/tag -200 λqb (qb List/Cons/tag -2 λrb (rb List/Cons/tag +0 λsb (sb List/Cons/tag -30 λtb (tb List/Cons/tag +20 λub (ub List/Cons/tag -10 λvb (vb List/Cons/tag 0 λwb (wb List/Cons/tag 1 λxb (xb List/Cons/tag 0 λyb (yb List/Cons/tag 1 λzb (zb List/Cons/tag 65535 λac (ac List/Cons/tag -10 λbc (bc List/Cons/tag -30 λcc (cc List/Cons/tag -200 λdc (dc List/Cons/tag -2 λec (ec List/Cons/tag +0 λfc (fc List/Cons/tag -26 λgc (gc List/Cons/tag +8 λhc (hc List/Cons/tag -18 λic (ic List/Cons/tag 0 λjc (jc List/Cons/tag 1 λkc (kc List/Cons/tag 1 λlc (lc List/Cons/tag 0 λmc (mc List/Cons/tag 65535 λnc (nc List/Cons/tag 30.000 λoc (oc List/Cons/tag 10.000 λpc (pc List/Cons/tag 200.000 λqc (qc List/Cons/tag 2.000 λrc (rc List/Cons/tag 0.000 λsc (sc List/Cons/tag 10240007340032.000 λtc (tc List/Cons/tag 1.107 λuc (uc List/Cons/tag 0.769 λvc (vc List/Cons/tag 0 λwc (wc List/Cons/tag 1 λxc (xc List/Cons/tag 0 λyc (yc List/Cons/tag 1 λzc (zc List/Cons/tag 65535 λad (ad List/Cons/tag -30.000 λbd (bd List/Cons/tag -10.000 λcd (cd List/Cons/tag 200.000 λdd (dd List/Cons/tag 2.000 λed (ed List/Cons/tag -0.000 λfd (fd List/Cons/tag 0.000 λgd (gd List/Cons/tag -2.034 λhd (hd List/Cons/tag NaN λid (id List/Cons/tag 0 λjd (jd List/Cons/tag 1 λkd (kd List/Cons/tag 1 λld (ld List/Cons/tag 0 λmd (md List/Cons/tag 65535 λnd (nd List/Cons/tag 10.000 λod (od List/Cons/tag 30.000 λpd (pd List/Cons/tag -200.000 λqd (qd List/Cons/tag -2.000 λrd (rd List/Cons/tag 0.000 λsd (sd List/Cons/tag 0.000 λtd (td List/Cons/tag 2.034 λud (ud List/Cons/tag NaN λvd (vd List/Cons/tag 0 λwd (wd List/Cons/tag 1 λxd (xd List/Cons/tag 0 λyd (yd List/Cons/tag 1 λzd (zd List/Cons/tag 65535 λae (ae List/Cons/tag -10.000 λbe (be List/Cons/tag -30.000 λce (ce List/Cons/tag -200.000 λde (de List/Cons/tag -2.000 λee (ee List/Cons/tag -0.000 λfe (fe List/Cons/tag 10240007340032.000 λge (ge List/Cons/tag -1.107 λhe (he List/Cons/tag NaN λie (ie List/Cons/tag 0 λje (je List/Cons/tag 1 λke (ke List/Cons/tag 1 λle (le List/Cons/tag 0 []))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))

Scott:
[30, 10, 200, 2, 0, 30, 0, 30, 0, 1, 0, 1, 65535, +30, +10, +200, +2, +0, +30, +0, +30, 0, 1, 0, 1, 65535, -30, -10, +200, +2, +0, +26, -28, -2, 0, 1, 1, 0, 65535, +10, +30, -200, -2, +0, -30, +20, -10, 0, 1, 0, 1, 65535, -10, -30, -200, -2, +0, -26, +8, -18, 0, 1, 1, 0, 65535, 30.000, 10.000, 200.000, 2.000, 0.000, 10240007340032.000, 1.107, 0.769, 0, 1, 0, 1, 65535, -30.000, -10.000, 200.000, 2.000, -0.000, 0.000, -2.034, NaN, 0, 1, 1, 0, 65535, 10.000, 30.000, -200.000, -2.000, 0.000, 0.000, 2.034, NaN, 0, 1, 0, 1, 65535, -10.000, -30.000, -200.000, -2.000, -0.000, 10240007340032.000, -1.107, NaN, 0, 1, 1, 0]
