tests/snapshots/run_file__bend_fold.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/bend_fold.bend
---
NumScott:
24

Scott:
24
