tests/snapshots/run_file__bitonic_sort.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/bitonic_sort.hvm
---
Lazy mode:

120

Strict mode:

120
