tests/snapshots/run_file__bitonic_sort_lam.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/bitonic_sort_lam.bend
---
32640
