tests/snapshots/run_file__box.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/box.bend
---
λa (a λb (b 10))
