tests/snapshots/run_file__box.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/box.hvm
---
λa (a λb (b 10))
