tests/snapshots/run_file__branch_statements_assignment.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/branch_statements_assignment.bend
---
6
